fixing weird overflows

--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -4,8 +4,8 @@ $sliderDuration: 80s;
 	position: relative;
 	display: flex;
 	justify-content: flex-start;
-	overflow: hidden;
-	width: 100%;
+	width: calc(100% + 128px);
+	transform: translateX(-128px);
 
 	&__elements {
 		display: flex;
