--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@ main {
   align-items: center;
   background-color: $text-color;
   width: 100vw;
+  contain: paint;
 }
 
 img {
